# APTree_MoveIt_UR

./: .gitignore  .setup_assistant  CMakeLists.txt  README.txt  package.xml
config/: initial_positions.yaml  local_setup.sh  planning_scene.yaml  ur.srdf  view_robot.rviz
config/srdf/: ur.srdf.xacro  ur_nailgun_macro.srdf.xacro  ur_simple_gripper_macro.srdf.xacro
launch/: demo.launch.py  ur_moveit.launch.py
meshes/collision/: gripperfixedbase.stl  leftarmgripper.stl  object.stl  rightarmgripper.stl  robottable.stl
meshes/visual/: gripperfixedbase.dae  leftarmgripper.dae  object1.dae  rightarmgripper.dae  robottable.dae
planned_trajectory/: trajectory_20251010_150215.yaml
scripts/: dynamic_scene_example.py  move_to_task.py  mtc_pick_task.py  pick_object_example.py  pick_task.py  publish_scene.py  publish_scene_mesh.py  publish_scene_mesh.py.bak  test_lift_only.py  test_move_and_pick.py
src/: hello_moveit.cpp  test_joint_planning.cpp  test_named_targets.cpp  test_pose_planning.cpp  test_robot_state.cpp
urdf/: ur.urdf  ur.urdf.xacro  ur_mocked.urdf.xacro  ur_nailgun.xacro  ur_simple_gripper.xacro
