<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_moveit</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shermin@todo.todo">shermin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_planners_stomp</depend>
  <depend>moveit_planners_chomp</depend>
  <depend>pilz_industrial_motion_planner</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>moveit_configs_utils</depend>
  <exec_depend>moveit_commander</exec_depend>
  
  <!-- Core ROS dependencies -->
  <depend>rclcpp</depend>
  
  <!-- Launch and visualization dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
